[package]
name = "imgmatch"
version = "0.1.2"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "A Rust program to compare two images"
repository = "https://github.com/0xAA55/imgmatch"
keywords = ["Graphics", "Image", "Picture"]

[dependencies]
image = "0.25.6"
rayon = "1.11.0"
turbojpeg = { version = "1.3.3", features = ["image"] }

[features]
numa = []
